# shader-desk

./: .gitignore  CMakeLists.txt  README.md  README_ru.md  flake.nix  run.sh  test_fxf.sh
cmake/: ShaderDeskConfig.cmake  cmake_uninstall.cmake.in  embed_resource.cmake  interactive-wallpaper  shader-desk-ctl
daemons/audio-daemon/: CMakeLists.txt  audio-data.hpp  main.cpp  test.py
daemons/evdev-daemon/: CMakeLists.txt  main.cpp
docs/: PLUGIN_DEV_GUIDE_ru.md  README.md  README_ru.md
docs/ru/: 01-installation-and-setup.md  02-configuration-and-scenes.md  03-workspaces-and-shaders.md  04-sdk-visual-plugins.md  05-sdk-data-providers.md  06-lua-api-reference.md  07-architecture-overview.md
docs/ru/diagram/XML/: Архитектура.drawio.xml
docs/ru/explanation/: architecture-overview.md
docs/ru/old/: 02-configuration-and-scenes.md  03-workspaces-and-shaders.md  04-sdk-visual-plugins.md  06-lua-api-reference.md  07-architecture-overview.md  08-utilities-reference.md  sdf_hub_concept.md  shader-desk-ctl.md
example-conf/: config_normal.json
plugins/: CMakeLists.txt  generate_plugin.py
plugins/audio-provider/: CMakeLists.txt  audio-data.hpp  audio-provider.cpp
plugins/dither-effect/: CMakeLists.txt  dither-effect.cpp  dither-effect.hpp
plugins/dither-effect/presets/: default.lua  doom_palette.lua
plugins/dither-effect/shaders/: dither_frag.glsl  dither_vert.glsl
plugins/gradient-bg/: CMakeLists.txt  gradient-bg.cpp  gradient-bg.hpp
plugins/gradient-bg/presets/: default.lua
plugins/gradient-bg/shaders/: gradient_frag.glsl  gradient_vert.glsl
plugins/hilbert-cube-effect/: CMakeLists.txt  hilbert-cube-effect.cpp  hilbert-cube-effect.hpp
plugins/hilbert-cube-effect/shaders/: cube_frag.glsl  cube_vert.glsl
plugins/ico-sphere-effect/: CMakeLists.txt  ico-sphere-effect.cpp  ico-sphere-effect.hpp
plugins/ico-sphere-effect-old/: CMakeLists.txt  ico-sphere-effect-old.cpp  ico-sphere-effect-old.hpp  ico-sphere-effect.cpp  ico-sphere-effect.hpp
plugins/ico-sphere-effect-old/presets/: cyberpunk.lua  matrix.lua  minimal_white.lua
plugins/ico-sphere-effect-old/shaders/: default_frag.glsl  default_vert.glsl  harmonics_frag.glsl  harmonics_vert.glsl
plugins/ico-sphere-effect/presets/: cyberpunk.lua  minimal_white.lua
plugins/ico-sphere-effect/shaders/: default_frag.glsl  default_vert.glsl  harmonics_frag.glsl  harmonics_vert.glsl  sphere_vert.glsl
plugins/image-bg/: CMakeLists.txt  image-bg.cpp  image-bg.hpp
plugins/image-bg/presets/: default.lua
plugins/image-bg/shaders/: image_frag.glsl  image_vert.glsl
plugins/pointer-provider/: CMakeLists.txt  ipc-protocol.hpp  pointer-data.hpp  pointer-provider.cpp
plugins/postprocess-effect/: CMakeLists.txt  postprocess-effect.cpp  postprocess-effect.hpp
plugins/postprocess-effect/presets/: crt_terminal.lua  datamosh_blocky.lua  datamosh_melt.lua  default.lua  dither_retro_color.lua  kaleidoscope_hexa.lua  liquid_rain.lua
plugins/postprocess-effect/shaders/: crt_retro_frag.glsl  datamosh_frag.glsl  kaleidoscope_frag.glsl  kaleidoscope_vert.glsl  liquid_glass_frag.glsl  postprocess_frag.glsl  postprocess_vert.glsl
plugins/pulse-color-effect/: CMakeLists.txt  pulse-color-effect.cpp  pulse-color-effect.hpp
plugins/pulse-color-effect/shaders/: pulse_frag.glsl  pulse_vert.glsl
plugins/shaders/: common.vert  fragment.frag
plugins/shadertoy-effect/: CMakeLists.txt  shadertoy-effect.cpp  shadertoy-effect.hpp
plugins/shadertoy-effect/shaders/: A_space_flower_frag.glsl  st_demo_frag.glsl
plugins/simple-wave-effect/: CMakeLists.txt  simple-wave-effect.cpp  simple-wave-effect.hpp
plugins/simple-wave-effect/shaders/: wave_frag.glsl  wave_vert.glsl
plugins/solid-bg/: CMakeLists.txt  solid-bg.cpp  solid-bg.hpp
plugins/solid-bg/presets/: default.lua
plugins/solid-bg/shaders/: solid_frag.glsl  solid_vert.glsl
plugins/templates/: CMakeLists.txt.template  plugin.cpp.template  plugin.hpp.template
plugins/test_gen/: CMakeLists.txt  test_gen.cpp  test_gen.hpp
plugins/test_gen/shaders/: sphere_vert.glsl
plugins/text-3d-effect/: CMakeLists.txt  text-3d-effect.cpp  text-3d-effect.hpp
plugins/text-3d-effect/shaders/: fullscreen_vert.glsl  raymarch_frag.glsl
plugins/universal-background/: CMakeLists.txt  universal-background.cpp  universal-background.hpp
plugins/universal-background/shaders/: bg_frag.glsl  bg_vert.glsl
plugins/video-bg/: CMakeLists.txt  video-bg.cpp  video-bg.hpp
plugins/video-bg/shaders/: video_frag.glsl  video_vert.glsl
shaders/: fire.frag  plasma.frag  vertex.vert  water.frag
src/: audio-daemon-client.cpp  audio-daemon-client.hpp  audio-data.hpp  config-manager.sh  core-context.hpp  data-provider.hpp  event-types.hpp  ico-sphere-effect.cpp  ico-sphere-effect.hpp  ico-sphere-plugin.cpp  input-handler.cpp  input-handler.hpp  interactive-wallpaper.cpp  interactive-wallpaper.hpp  ipc-protocol.hpp  ipc-utils.hpp  kinematic-effect.hpp  lua-config-generator.cpp  lua-config-generator.hpp  lua-engine.cpp  lua-engine.hpp  main.cpp  plugin-abi.hpp  plugin-manager.cpp  plugin-manager.hpp  pointer-daemon-client.cpp  pointer-daemon-client.hpp  shader-effect.cpp  shader-effect.hpp  shader-utils.cpp  shader-utils.hpp  tracy-memory.cpp  translate_comments.py  translation_map.json  wallpaper-effect.hpp
src/defaults/: ctl.lua  help.txt  init.lua  providers.lua
src/defaults/scenes/: calm_floating_gallery.lua  cyber_horizon.lua  deep_space.lua  default.lua  dither_gameboy_cube.lua  dither_vga_mesh.lua  dither_virtual_boy.lua  glitch_demo.lua  liquid.lua  live_stream.lua  macos_mesh.lua  orbital_harmonics.lua  windows_to_worlds.lua
systemd/: shader-desk.service
utilities/: embed_fs.py  shader-desk-ctl.cpp  shader-desk-run.sh
